--- a/content/posts/2023-plan.md
+++ b/content/posts/2023-plan.md
@@ -10,7 +10,16 @@ draft = false
 ### 工作 {#工作}
 
 
+####  {#d41d8c}
+
+
 ### 健康 {#健康}
+
+
+#### 减肥20KG {#减肥20kg}
+
+
+#### 坚持运动 {#坚持运动}
 
 
 ### 家庭 {#家庭}
@@ -22,7 +31,22 @@ draft = false
 ### 个人提升 {#个人提升}
 
 
+#### 完成技术书籍阅读 {#完成技术书籍阅读}
+
+
+#### 写10篇技术博客 {#写10篇技术博客}
+
+
+#### 重新开始背单词 {#重新开始背单词}
+
+
 ### 财务投资 {#财务投资}
 
 
+####  {#d41d8c}
+
+
 ### 享受生活 {#享受生活}
+
+
+####  {#d41d8c}
