--- a/content/posts/2023-plan.md
+++ b/content/posts/2023-plan.md
@@ -25,7 +25,13 @@ draft = false
 ### 家庭 {#家庭}
 
 
+#### 过年回家 {#过年回家}
+
+
 ### 社交 {#社交}
+
+
+#### 跟同学们家庭聚会旅游1次 {#跟同学们家庭聚会旅游1次}
 
 
 ### 个人提升 {#个人提升}
@@ -52,4 +58,4 @@ draft = false
 ### 享受生活 {#享受生活}
 
 
-####  {#d41d8c}
+#### 每天晚上打扫居住卫生20分钟 {#每天晚上打扫居住卫生20分钟}
