--- a/content/posts/2023-plan.md
+++ b/content/posts/2023-plan.md
@@ -10,7 +10,13 @@ draft = false
 ### 工作 {#工作}
 
 
-####  {#d41d8c}
+#### 明确工作目标 {#明确工作目标}
+
+
+#### 提高沟通能力 {#提高沟通能力}
+
+
+#### 提高沟通主动性 {#提高沟通主动性}
 
 
 ### 健康 {#健康}
