--- a/content/posts/2023-plan.md
+++ b/content/posts/2023-plan.md
@@ -19,6 +19,12 @@ draft = false
 #### 提高沟通主动性 {#提高沟通主动性}
 
 
+#### 进行更多的思维实验 {#进行更多的思维实验}
+
+
+#### 更热爱，更高效，更投入 {#更热爱-更高效-更投入}
+
+
 ### 健康 {#健康}
 
 
