--- a/content/posts/2023-plan.md
+++ b/content/posts/2023-plan.md
@@ -25,6 +25,9 @@ draft = false
 #### 更热爱，更高效，更投入 {#更热爱-更高效-更投入}
 
 
+#### 坚持记录工作日志 {#坚持记录工作日志}
+
+
 ### 健康 {#健康}
 
 
@@ -41,6 +44,9 @@ draft = false
 
 
 #### 过年回家 {#过年回家}
+
+
+#### 陪父母看一场电影 {#陪父母看一场电影}
 
 
 ### 社交 {#社交}
