--- a/content/posts/2023-plan.md
+++ b/content/posts/2023-plan.md
@@ -22,7 +22,7 @@ draft = false
 #### 进行更多的思维实验 {#进行更多的思维实验}
 
 
-#### 更热爱，更高效，更投入 {#更热爱-更高效-更投入}
+#### 更热爱，更高效，更专注 {#更热爱-更高效-更专注}
 
 
 #### 坚持记录工作日志 {#坚持记录工作日志}
@@ -80,3 +80,12 @@ draft = false
 
 
 #### 每天晚上打扫居住卫生20分钟 {#每天晚上打扫居住卫生20分钟}
+
+
+### 书单 {#书单}
+
+
+#### 沟通的技巧 {#沟通的技巧}
+
+
+####  {#d41d8c}
