--- a/content/posts/明史-世宗.md
+++ b/content/posts/明史-世宗.md
@@ -8,8 +8,10 @@ tags:
 categories:
   - Culture
 series:
+description: 明史-世宗
 ---
-　　◎世宗一  
+
+# 世宗一  
   
 　　世宗钦天履道英毅神圣宣文广武洪仁大孝肃皇帝，讳厚，宪宗孙也。父兴献王祐杬，国安陆，正德十四年薨。帝年十有三，以世子理国事。  
   
@@ -57,7 +59,7 @@ series:
   
 　　二十一年夏四月庚申，大高玄殿成。闰五月戊辰，俺答、阿不孩遣使款大同塞，巡抚都御史龙大有诱杀之。六月辛卯，俺答寇朔州。壬寅，入雁门关。丁未，犯太原。秋七月己酉朔，日有食之。夏言罢。己未，俺答寇潞安，掠沁、汾、襄垣、长子，参将张世忠战死。八月辛巳，募兵于直隶、山东、河南。壬午，振山西被兵州县，免田租。癸巳，礼部尚书严嵩兼武英殿大学士，预机务。九月癸亥，员外郎刘魁谏营雷殿，予杖下狱。冬十月丁酉，宫人谋逆伏诛，磔端妃曹氏、宁嫔王氏于市。是年，免畿内、陕西、河南、福建被灾税粮。安南入贡。
 
-　　◎世宗二  
+　# 世宗二  
   
 　　二十二年春正月丙午朔，日有食之。三月庚戌，复遣使采木湖广。是春，俺答屡入塞。秋八月，犯延绥，总兵官吴瑛等击败之。冬十月，朵颜入寇，杀守备陈舜。十二月乙酉，免南畿被灾税粮。是年，占城、土鲁番、撒马儿罕、天方、乌斯藏入贡。  
   
