--- a/content/posts/图数据库.md
+++ b/content/posts/图数据库.md
@@ -81,16 +81,16 @@ $$) as (V agtype, R agtype, V2 agtype);
 ```
 
 
-![关联结果](graphdb1.png)
+![](https://img.joeyzheng.tech/ob-1726664063201.png)
 
 
 # 性能测试
-写数据  
-![写数据](../images/graphdb2.png)
+写数据  ![](https://img.joeyzheng.tech/ob-1726664044458.png)
 
 建关联  
-![建关联](../images/graphdb3.png)
+![](https://img.joeyzheng.tech/ob-1726664027599.png)
+
 
 查数据异常  
-![查数据](../images/graphdb4.png)
+![](https://img.joeyzheng.tech/ob-1726664002516.png)
 
