--- a/content/posts/2025-01.md
+++ b/content/posts/2025-01.md
@@ -1,5 +1,5 @@
 ---
-aliases: []
+
 tags:
   - book
   - read-note
@@ -7,7 +7,8 @@ authors:
   - joey5403
 categories:
   - Book
-lastmod: "2025-01-01"
+lastmode: 2025-01-01
+published: "2025-01-01"
 draft: true
 title: 世上为什么要有图书馆
 ---
