--- a/content/posts/《道德经》译文精简版.md
+++ b/content/posts/《道德经》译文精简版.md
@@ -1,13 +1,13 @@
 ---
 id: 《道德经》译文精简版
-aliases: []
+
 tags:
   - 道德经
 authors:
   - joey5403
 categories:
   - Tech
-lastmod: "2025-03-20"
+lastmode: 2025-03-20
 title: 《道德经》译文精简版
 ---
 
