--- a/content/posts/道德经全文.md
+++ b/content/posts/道德经全文.md
@@ -1,13 +1,14 @@
 ---
 id: 道德经
-aliases: []
+
 tags:
   - 道德经
 authors:
   - joey5403
 categories:
   - Tech
-lastmod: "2025-03-20"
+lastmode: 2025-03-20
+published: "2024-03-20"
 title: 道德经
 ---
 
