--- a/content/posts/2025-01.md
+++ b/content/posts/2025-01.md
@@ -5,10 +5,9 @@ tags:
   - read-note
 authors:
   - joey5403
-categories:
-  - Book
+category: Book
 lastmode: 2025-01-01
-published: "2025-01-01"
+published: 2025-01-01
 draft: true
 title: 世上为什么要有图书馆
 ---
