--- a/content/posts/《道德经》译文精简版.md
+++ b/content/posts/《道德经》译文精简版.md
@@ -5,9 +5,9 @@ tags:
   - 道德经
 authors:
   - joey5403
-categories:
-  - Tech
+category: Tech
 lastmode: 2025-03-20
+published: 2025-03-20
 title: 《道德经》译文精简版
 ---
 
