--- a/content/posts/代码分支管理.md
+++ b/content/posts/代码分支管理.md
@@ -1,13 +1,12 @@
 ---
 lastmod: 2024-09-18
-published: "2024-09-18"
+published: 2024-09-18
 authors:
   - joey5403
 title: 代码分支管理
 tags: 
   - Archtect
-categories:
-  - Tech
+category: Tech
 series:
 ---
 
