--- a/content/posts/图数据库.md
+++ b/content/posts/图数据库.md
@@ -1,12 +1,14 @@
 ---
 lastmod: 2024-07-31
-published: "2024-07-31"
+published: 2024-07-31
 authors:
   - joey5403
 title: 图数据库
 drafts: true
 tags: 
-categories: 
+  - database
+category: 
+  - Tech
 series:
 ---
 
