--- a/content/posts/明史-世宗.md
+++ b/content/posts/明史-世宗.md
@@ -1,13 +1,12 @@
 ---
 lastmod: 2024-07-31
-published: "2024-07-31"
+published: 2024-07-31
 authors:
   - joey5403
 title: 明史-世宗
 tags: 
   - 明史
-categories:
-  - Culture
+category: Culture
 series:
 description: 明史-世宗
 ---
