--- a/content/posts/有效激励&有效沟通培训笔记.md
+++ b/content/posts/有效激励&有效沟通培训笔记.md
@@ -1,6 +1,6 @@
 ---
 lastmod: 2023-10-26
-published: "2023-10-26"
+published: 2023-10-26
 authors:
   - joey5403
 title: 有效激励&有效沟通培训笔记
@@ -8,8 +8,7 @@ tags:
   - 管理
   - 沟通
   - 激励
-categories:
-  - Manager
+category: Manager
 series:
 ---
 
