--- a/content/posts/素书.md
+++ b/content/posts/素书.md
@@ -1,14 +1,13 @@
 ---
 lastmod: 2024-07-31
-published: "2024-07-31"
+published: 2024-07-31
 authors:
   - joey5403
 title: 素书
 tags:
   - 黄石公
   - 国学
-categories:
-  - Culture
+category: Culture
 series:
 ---
 
