--- a/content/posts/软件工程中的博弈论.md
+++ b/content/posts/软件工程中的博弈论.md
@@ -1,14 +1,13 @@
 ---
 lastmod: 2025-04-21
-published: "2024-04-21"
+published: 2024-04-21
 authors:
   - joey5403
 title: 软件工程中的博弈论
 tags:
   - Architecture
   - SoftwareEngineering
-categories:
-  - SoftwareEngineering
+category: SoftwareEngineering
 series:
 ---
 翻译自:
