--- a/content/posts/道德经全文.md
+++ b/content/posts/道德经全文.md
@@ -5,10 +5,9 @@ tags:
   - 道德经
 authors:
   - joey5403
-categories:
-  - Tech
+category: Tech
 lastmode: 2025-03-20
-published: "2024-03-20"
+published: 2024-03-20
 title: 道德经
 ---
 
