--- a/content/posts/光猫不改桥接的网络配置.md
+++ b/content/posts/光猫不改桥接的网络配置.md
@@ -1,12 +1,13 @@
 ---
-id: Vim使用小技巧
-
+id: 光猫不改桥接的ipv6网络配置
 tags:
   - vim
 category: Tech
-published: 2024-08-28
-title: Vim使用小技巧
+published: 2025-06-18
+title: 光猫不改桥接的ipv6网络配置
 ---
+
+
 ```mermaid
 graph LR
 光猫 --> ASUS
@@ -20,3 +21,4 @@ R2S --> 小米
 ASUS：做主路由，开ipv6防火墙，ipv6选passthrough模式
 R2S：关ipv6防火墙，所有接口ipv6都选中继模式
 小米：改成中继模式当成R2S的AP使用
+
