--- a/content/posts/软件工程中的博弈论.md
+++ b/content/posts/软件工程中的博弈论.md
@@ -1,7 +1,7 @@
 ---
 published: 2025-04-21
 title: 软件工程中的博弈论
-image: https://img.joeyzheng.tech/ob-1748591122387.png
+image: https://img.joeyzheng.tech/ob-1748591122387.png-30
 
 tags:
   - Architecture
