--- a/content/posts/《道德经》译文精简版.md
+++ b/content/posts/《道德经》译文精简版.md
@@ -1,6 +1,6 @@
 ---
 id: 《道德经》译文精简版
-image: https://img.joeyzheng.tech/ob-1748590936723.png
+image: https://img.joeyzheng.tech/ob-1748590936723.png-30
 
 tags:
   - 道德经
