--- a/content/posts/光猫不改桥接的网络配置.md
+++ b/content/posts/光猫不改桥接的网络配置.md
@@ -1,5 +1,6 @@
 ---
 id: 光猫不改桥接的ipv6网络配置
+aliases: []
 tags:
   - vim
 category: Tech
@@ -7,7 +8,7 @@ published: 2025-06-18
 title: 光猫不改桥接的ipv6网络配置
 ---
 
-![](http://img.joeyzheng.tech/ob-1750239898551.png)
+![mermaid](http://img.joeyzheng.tech/ob-1750239898551.png)
 
 ```mermaid
 graph LR
@@ -18,9 +19,7 @@ R2S --> 小米
 小米 --> PC
 ```
 
-
-光猫：未改桥接，关ipv6防火墙，DMZ到ASUS
-ASUS：做主路由，开ipv6防火墙，ipv6选passthrough模式
-R2S：关ipv6防火墙，所有接口ipv6都选中继模式
-小米：改成中继模式当成R2S的AP使用
-
+光猫：未改桥接，关ipv6防火墙，DMZ到ASUS  
+ASUS：做主路由，开ipv6防火墙，ipv6选passthrough模式  
+R2S：关ipv6防火墙，所有接口ipv6都选中继模式  
+小米：改成中继模式当成R2S的AP使用  
