--- a/content/posts/2025-01.md
+++ b/content/posts/2025-01.md
@@ -1,12 +1,12 @@
 ---
-tags:
-  - book
-  - read-note
-category: Book
+title: 世上为什么要有图书馆
 date: 2025-01-01
+tags: book,read-note
+category: Book
+
 published: 2025-01-01
 draft: true
-title: 世上为什么要有图书馆
+
 ---
 
 # 《世上为什么要有图书馆》
