--- a/content/posts/光猫不改桥接的网络配置.md
+++ b/content/posts/光猫不改桥接的网络配置.md
@@ -1,8 +1,9 @@
 ---
 id: 光猫不改桥接的ipv6网络配置
+title: 光猫不改桥接的ipv6网络配置
+date:  2025-06-18
 aliases: []
-tags:
-  - vim
+tags:  vim
 category: Tech
 published: 2025-06-18
 title: 光猫不改桥接的ipv6网络配置
