--- a/content/posts/图数据库.md
+++ b/content/posts/图数据库.md
@@ -1,9 +1,9 @@
 ---
 published: 2024-07-31
 title: 图数据库
+date: 2024-07-31
 drafts: true
-tags: 
-  - database
+tags:   database
 category: Tech
 series:
 ---
