--- a/content/posts/明史-世宗.md
+++ b/content/posts/明史-世宗.md
@@ -1,8 +1,8 @@
 ---
 published: 2024-07-31
 title: 明史-世宗
-tags: 
-  - 明史
+date: 2024-07-31
+tags:  明史
 category: Culture
 series:
 description: 明史-世宗
