--- a/content/posts/赖德·卡罗尔-《子弹笔记》-读书笔记.md
+++ b/content/posts/赖德·卡罗尔-《子弹笔记》-读书笔记.md
@@ -1,9 +1,9 @@
 ---
-tags:
-  - vim
+date: 2023-08-28
+title:  赖德·卡罗尔-《子弹笔记》-读书笔记
+tags: booknote
 category: Tech
 published: 2023-08-28
-title:  赖德·卡罗尔-《子弹笔记》-读书笔记
 ---
 
 《子弹笔记》
