--- a/content/posts/《道德经》译文精简版.md
+++ b/content/posts/《道德经》译文精简版.md
@@ -1,12 +1,12 @@
 ---
 id: 《道德经》译文精简版
+title: 《道德经》译文精简版
 image: https://img.joeyzheng.tech/ob-1748590936723.png-30
 date: 2025-03-20
-tags:
-  - 道德经
+tags: 道德经
 category: Tech
 published: 2025-03-20
-title: 《道德经》译文精简版
+
 ---
 
 第一章  
