--- a/content/posts/道德经全文.md
+++ b/content/posts/道德经全文.md
@@ -1,11 +1,11 @@
 ---
 id: 道德经
+date: 2025-03-20
+title: 道德经
 image: https://img.joeyzheng.tech/ob-1748506538482.png-30
-tags:
-  - 道德经
+tags: 道德经
 category: Tech
 published: 2025-03-20
-title: 道德经
 ---
 
 【第一章】道可道，非常道；名可名，非常名。无名天地之始，有名万物之母。故常无欲，以观其妙；常有欲，以观其徼（jiào）。此两者同出而异名，同谓之玄，玄之又玄，众妙之门。
