--- a/content/posts/代码分支管理.md
+++ b/content/posts/代码分支管理.md
@@ -3,7 +3,7 @@ published: 2024-09-18
 title: 代码分支管理
 date: 2024-09-18
 tags:  Archtect
-category: Tech
+category: SoftwareEngineering
 series:
 ---
 
