--- a/content/posts/赖德·卡罗尔-《子弹笔记》-读书笔记.md
+++ b/content/posts/赖德·卡罗尔-《子弹笔记》-读书笔记.md
@@ -1,8 +1,8 @@
 ---
 date: 2023-08-28
 title:  赖德·卡罗尔-《子弹笔记》-读书笔记
-tags: booknote
-category: Tech
+tags: book
+category: Book
 published: 2023-08-28
 ---
 
