--- a/content/posts/道德经全文.md
+++ b/content/posts/道德经全文.md
@@ -4,7 +4,7 @@ date: 2025-03-20
 title: 道德经
 image: https://img.joeyzheng.tech/ob-1748506538482.png-30
 tags: 道德经
-category: Tech
+category: Culture
 published: 2025-03-20
 ---
 
