--- a/content/posts/《道德经》译文精简版.md
+++ b/content/posts/《道德经》译文精简版.md
@@ -4,7 +4,7 @@ title: 《道德经》译文精简版
 image: https://img.joeyzheng.tech/ob-1748590936723.png-30
 date: 2025-03-20
 tags: 道德经
-category: Tech
+category: Culture
 published: 2025-03-20
 
 ---
