--- a/content/posts/世上为什么要有图书馆.md
+++ b/content/posts/世上为什么要有图书馆.md
@@ -1,10 +1,12 @@
 ---
-title: 世上为什么要有图书馆
-date: 2025-01-01
-tags: book, read-note
+id: 世上为什么要有图书馆
+aliases: []
+tags:
+  - book
 category: Book
+date: 2025-01-01
 status: draft
-
+title: 世上为什么要有图书馆
 ---
 
 # 《世上为什么要有图书馆》
