--- a/content/posts/代码分支管理.md
+++ b/content/posts/代码分支管理.md
@@ -1,10 +1,12 @@
 ---
+id: 代码分支管理
+aliases: []
+tags:
+  - Archtect
+category: SoftwareEngineering
+date: 2024-09-18
 published: 2024-09-18
 title: 代码分支管理
-date: 2024-09-18
-tags:  Archtect
-category: SoftwareEngineering
-series:
 ---
 
 # 拆分为两套代码所存在的问题：
