--- a/content/posts/光猫不改桥接的网络配置.md
+++ b/content/posts/光猫不改桥接的网络配置.md
@@ -1,11 +1,12 @@
 ---
 id: 光猫不改桥接的ipv6网络配置
-title: 光猫不改桥接的ipv6网络配置
-date:  2025-06-18
 aliases: []
-tags:  vim
+tags:
+  - vim
 category: Tech
+date: 2025-06-18
 published: 2025-06-18
+title: 光猫不改桥接的ipv6网络配置
 ---
 
 ![mermaid](http://img.joeyzheng.tech/ob-1750239898551.png)
