--- a/content/posts/图数据库.md
+++ b/content/posts/图数据库.md
@@ -1,11 +1,13 @@
 ---
-published: 2024-07-31
-title: 图数据库
-date: 2024-07-31
-status: draft
-tags:   database
+id: 图数据库
+aliases: []
+tags:
+  - database
 category: Tech
-series:
+date: 2024-07-31
+published: 2024-07-31
+status: draft
+title: 图数据库
 ---
 
 # 核心概念
