--- a/content/posts/明史-世宗.md
+++ b/content/posts/明史-世宗.md
@@ -1,11 +1,13 @@
 ---
+id: 明史-世宗
+aliases: []
+tags:
+  - 明史
+category: Culture
+date: 2024-07-31
+description: 明史-世宗
 published: 2024-07-31
 title: 明史-世宗
-date: 2024-07-31
-tags:  明史
-category: Culture
-series:
-description: 明史-世宗
 ---
 
 # 世宗一  
