--- a/content/posts/有效激励&有效沟通培训笔记.md
+++ b/content/posts/有效激励&有效沟通培训笔记.md
@@ -1,10 +1,14 @@
 ---
-published: 2023-10-26
-date: 2023-10-26
-title: 有效激励&有效沟通培训笔记
-tags: 管理,沟通,激励
+id: 有效激励&有效沟通培训笔记
+aliases: []
+tags:
+  - 管理
+  - 沟通
+  - 激励
 category: Manager
-series:
+date: 2023-10-26
+published: 2023-10-26
+title: 有效激励&有效沟通培训笔记
 ---
 
 # 有效激励
