--- a/content/posts/素书.md
+++ b/content/posts/素书.md
@@ -1,10 +1,13 @@
 ---
-published: 2024-07-31
-date: 2024-07-31
-title: 素书
-tags: 黄石公, 国学
+id: 素书
+aliases: []
+tags:
+  - 黄石公
+  - 国学
 category: Culture
-series:
+date: 2024-07-31
+published: 2024-07-31
+title: 素书
 ---
 
 
