--- a/content/posts/赖德·卡罗尔-《子弹笔记》-读书笔记.md
+++ b/content/posts/赖德·卡罗尔-《子弹笔记》-读书笔记.md
@@ -1,9 +1,12 @@
 ---
-date: 2023-08-28
-title:  赖德·卡罗尔-《子弹笔记》-读书笔记
-tags: book
+id: 赖德·卡罗尔-《子弹笔记》-读书笔记
+aliases: []
+tags:
+  - book
 category: Book
+date: 2023-08-28
 published: 2023-08-28
+title: 赖德·卡罗尔-《子弹笔记》-读书笔记
 ---
 
 《子弹笔记》
