--- a/content/posts/软件工程中的博弈论.md
+++ b/content/posts/软件工程中的博弈论.md
@@ -1,10 +1,14 @@
 ---
-published: 2025-04-21
-date: 2025-04-21
-title: 软件工程中的博弈论
-image: https://img.joeyzheng.tech/ob-1748591122387.png-30
-tags: Architecture,SoftwareEngineering
+id: 软件工程中的博弈论
+aliases: []
+tags:
+  - Architecture
+  - SoftwareEngineering
 category: SoftwareEngineering
+date: 2025-04-21
+image: https://img.joeyzheng.tech/ob-1748591122387.png-30
+published: 2025-04-21
+title: 软件工程中的博弈论
 ---
 翻译自:
 [https://medium.com/@myroslavazel/game-theory-in-software-engineering-812101b77840](https://medium.com/@myroslavazel/game-theory-in-software-engineering-812101b77840)
